change 'change' to 'country' at the footer

--- a/index.html
+++ b/index.html
@@ -778,7 +778,8 @@
               <ul class="right-flag">
                 <li>
                   <a href="#"
-                    ><img src="images/flag.png" alt="" /> <span>Change</span></a
+                    ><img src="images/flag.png" alt="" />
+                    <span>Country</span></a
                   >
                 </li>
               </ul>
