make some changes on the home page

--- a/index.html
+++ b/index.html
@@ -143,8 +143,10 @@
         <div class="container">
           <div class="row clearfix">
             <div class="find-box">
-              <h1>Search for halal products<br />from your favorite brands</h1>
-              <h4>Thousands of halal products in different categories</h4>
+              <!-- <h1>
+                Search for your favorite products<br />for halal alternatives
+              </h1> -->
+              <!-- <h4>Thousands of halal products in different categories</h4> -->
               <div class="product-sh">
                 <div class="col-sm-6">
                   <div class="form-sh">
@@ -172,7 +174,7 @@
                 <div class="col-sm-3">
                   <div class="form-sh"><a class="btn" href="#">Search</a></div>
                 </div>
-                <p>Or simply<a href="#"> click here </a> and get inspired!</p>
+                <!-- <p>Or simply<a href="#"> click here </a> and get inspired!</p> -->
               </div>
             </div>
           </div>
@@ -331,30 +333,27 @@
           <div class="col-md-6 col-sm-6 wow fadeIn" data-wow-delay="0.2s">
             <div class="exciting_box f_pd">
               <img src="images/exciting_img-01.jpg" class="icon-small" alt="" />
-              <h4>
-                Explore <strong>exciting</strong> and exotic products tailored
-                to you.
-              </h4>
+              <h4>How do we select products?</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris..
+                We search online marketplaces for products that include "halal"
+                in their title or description and list them in the proper
+                categories on THB. We also list products that do not contain any
+                haram substances although they may not be labeled as halal by
+                their sellers. For more information, click
+                <a href="#">here</a>.
               </p>
             </div>
           </div>
           <div class="col-md-6 col-sm-6 wow fadeIn" data-wow-delay="0.4s">
             <div class="exciting_box l_pd">
               <img src="images/exciting_img-02.jpg" class="icon-small" alt="" />
-              <h4>
-                <strong>List your products on</strong> chamb and grow
-                connections.
-              </h4>
+              <h4>How can you help?</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris..
+                Our purpose is to find and list halal products only. However, we
+                have no control over the products sold by third-party sellers.
+                If you detect any issue with the halal status of a certain
+                product, please, report it by filling out the form
+                <a href="#">here</a>.
               </p>
             </div>
           </div>
@@ -394,7 +393,7 @@
               <img src="images/bg_img1.png" alt="#" />
             </div>
             <div class="container">
-              <div class="buyer-box clearfix">
+              <!-- <div class="buyer-box clearfix">
                 <div class="col-md-6 col-sm-6 wow fadeIn" data-wow-delay="0.2s">
                   <div class="left-buyer">
                     <img
@@ -419,7 +418,7 @@
                     <a href="#">Create a buyer account</a>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
