--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
             <img src="images/bg_img1.png" alt="#" />
           </div>
           <div class="main-start-box">
-            <div class="container">
+            <div class="container grow-your-store">
               <div class="supplier clearfix">
                 <div class="col-md-5 col-sm-6">
                   <div class="left-supplier">
