make some minor changes on the home page

--- a/index.html
+++ b/index.html
@@ -143,10 +143,8 @@
         <div class="container">
           <div class="row clearfix">
             <div class="find-box">
-              <!-- <h1>
-                Search for your favorite products<br />for halal alternatives
-              </h1> -->
-              <!-- <h4>Thousands of halal products in different categories</h4> -->
+              <!-- <h1>Search thousands of products<br />in different categories</h1>
+              <h4>Thousands of halal products in different categories</h4> -->
               <div class="product-sh">
                 <div class="col-sm-6">
                   <div class="form-sh">
@@ -463,7 +461,7 @@
     </div>
     <div class="products">
       <div class="main-products">
-        <h2>TRENDING PRODUCTS ON CHAMB</h2>
+        <h2>TRENDING PRODUCTS ON THE HALAL BUYS</h2>
         <div class="product-slidr">
           <div class="slider">
             <div>
