add new flag images

--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
               </li>
               <li>
                 <a href="canada.html"
-                  ><img src="images/Canada-icon.png" alt="" /> Canada
+                  ><img src="images/flag-canada.svg.png" alt="" /> Canada
                 </a>
               </li>
               <li>
                 <a href="united-kingdom.html"
-                  ><img src="images/uk-icon.png" alt="" /> United Kingdom</a
+                  ><img src="images/flag-uk.svg.png" alt="" /> United Kingdom</a
                 >
               </li>
             </ul>
