modify html and css code

--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
             <div class="footer-link-box clearfix">
               <div class="col-md-6 col-sm-6">
                 <div class="left-f-box">
-                  <div class="col-sm-4">
+                  <!-- <div class="col-sm-4">
                     <h2>SELL ON THB</h2>
                     <ul>
                       <li><a href="#">Create account</a></li>
@@ -693,7 +693,7 @@
                       <li><a href="#">Categories</a></li>
                       <li><a href="#">FAQ for buyers</a></li>
                     </ul>
-                  </div>
+                  </div> -->
                   <div class="col-sm-4">
                     <h2>COMPANY</h2>
                     <ul>
