--- a/about-us.html
+++ b/about-us.html
@@ -23,7 +23,7 @@
     <header id="header" class="top-head">
       <!-- Static navbar -->
       <nav class="navbar navbar-default">
-        <div class="container-fluid">
+        <!-- <div class="container-fluid">
           <div class="row">
             <div class="col-md-4 col-sm-12 left-rs">
               <div class="navbar-header">
@@ -93,6 +93,78 @@
               </div>
             </div>
           </div>
+        </div> -->
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-4 col-sm-12 left-rs">
+              <div class="navbar-header">
+                <button
+                  type="button"
+                  id="top-menu"
+                  class="navbar-toggle collapsed"
+                  data-toggle="collapse"
+                  data-target="#navbar"
+                  aria-expanded="false"
+                >
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a href="index.html" class="navbar-brand">
+                  <!-- <img src="images/temporarylogo.png" alt=""/> -->
+                  THE HALAL BUYS
+                </a>
+                <!-- <form class="navbar-form navbar-left web-sh">
+                  <div class="form">
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Search for products or companies"
+                    />
+                  </div>
+                </form> -->
+              </div>
+            </div>
+            <div class="col-md-8 col-sm-12">
+              <div class="right-nav">
+                <div class="login-sr">
+                  <!-- <div class="login-signup">
+                    <ul>
+                      <li><a href="#">Login</a></li>
+                      <li><a class="custom-b" href="#">Sign up</a></li>
+                    </ul>
+                  </div> -->
+                </div>
+                <div class="help-r hidden-xs">
+                  <div class="help-box">
+                    <ul>
+                      <li>
+                        <a data-toggle="modal" data-target="#myModal" href="#">
+                          <span>Country</span>
+                          <img src="images/flag.png" alt="" />
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><img class="h-i" src="images/help-icon.png" alt="" />
+                          Help
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="nav-b hidden-xs">
+                  <div class="nav-box">
+                    <ul>
+                      <li><a href="howitworks.html">FAQs</a></li>
+                      <li><a href="about-us.html">THB for Business</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <!--/.container-fluid -->
       </nav>
@@ -128,8 +200,8 @@
     <div id="sidebar" class="top-nav">
       <ul id="sidebar-nav" class="sidebar-nav">
         <li><a href="#">Help</a></li>
-        <li><a href="#">How it works</a></li>
-        <li><a href="#">Chamb for Business</a></li>
+        <li><a href="#">FAQs</a></li>
+        <li><a href="#">THB for Business</a></li>
       </ul>
     </div>
     <div class="main-template-about">
