add new images to category boxes

--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
                 <div class="box-img">
                   <h4>Grocery</h4>
                   <img
-                    src="images/groceries.png"
+                    src="images/grocery-icon.png"
                     alt="groceries"
-                    class="category-image grocery-image"
+                    class="category-image grocery-img"
                   />
                 </div>
               </a>
@@ -194,8 +194,8 @@
                 <div class="box-img">
                   <h4>Clothing & Shoes</h4>
                   <img
-                    class="category-image"
-                    src="images/Adidas-Shoe-icon.png"
+                    class="category-image clothing-img"
+                    src="images/dress-icon.png"
                     alt="clothing and shoes"
                   />
                 </div>
@@ -218,7 +218,7 @@
                 <div class="box-img">
                   <h4>Home Design</h4>
                   <img
-                    src="images/product/5.png"
+                    src="images/product.png"
                     alt="bed"
                     class="category-image"
                   />
