add new category icons

--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
                 <div class="box-img">
                   <h4>Toys & Games</h4>
                   <img
-                    class="category-image"
-                    src="images/toys games.png"
-                    alt="a ball with stripes"
+                    class="category-image toys-img"
+                    src="images/toys-icon.png"
+                    alt="ball with stripes"
                   />
                 </div>
               </a>
@@ -218,9 +218,9 @@
                 <div class="box-img">
                   <h4>Home Design</h4>
                   <img
-                    src="images/product.png"
-                    alt="bed"
-                    class="category-image"
+                    src="images/homedesign-icon.png"
+                    alt="painting"
+                    class="category-image homedesign-img"
                   />
                 </div>
               </a>
@@ -230,21 +230,9 @@
                 <div class="box-img">
                   <h4>Personal Care</h4>
                   <img
-                    src="images/perfume-icon.png"
-                    alt="perfume bottle"
-                    class="category-image"
-                  />
-                </div>
-              </a>
-            </div>
-            <div class="col-lg-3 col-sm-6 col-md-3">
-              <a href="productpage.html">
-                <div class="box-img">
-                  <h4>Household Essentials</h4>
-                  <img
-                    class="category-image air-purifier-image"
-                    src="images/air-purifier-icon.png"
-                    alt="air purifier"
+                    src="images/personalcare-icon.png"
+                    alt="hand soap"
+                    class="category-image personalcare-img"
                   />
                 </div>
               </a>
@@ -254,9 +242,21 @@
                 <div class="box-img">
                   <h4>Sports & Outdoors</h4>
                   <img
-                    class="category-image basketball-image"
-                    src="images/basketball.png"
-                    alt="basketball"
+                    src="images/sports-icon.png"
+                    alt="protein powder"
+                    class="category-image sports-img"
+                  />
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-md-3">
+              <a href="productpage.html">
+                <div class="box-img">
+                  <h4>Baby</h4>
+                  <img
+                    class="category-image baby-icon"
+                    src="images/baby-icon.png"
+                    alt="baby crib toy"
                   />
                 </div>
               </a>
@@ -266,8 +266,8 @@
                 <div class="box-img">
                   <h4>Books</h4>
                   <img
-                    class="category-image"
-                    src="images/Books-icon.png"
+                    class="category-image books-img"
+                    src="images/books-icon.png"
                     alt="books"
                   />
                 </div>
