make changes in the home page

--- a/index.html
+++ b/index.html
@@ -280,13 +280,17 @@
         </div>
       </div>
     </div>
-    <div class="cat-main-box">
+    <!-- <div class="cat-main-box">
       <div class="container">
         <div class="row panel-row">
           <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-delay="0.0s">
             <div class="panel panel-default">
               <div class="panel-body">
-                <img src="images/xpann-icon.jpg" class="icon-small" alt="" />
+                <img
+                  src="images/xpann-icon.jpg"
+                  class="icon-small check-icon"
+                  alt="check symbol"
+                />
                 <h4>We do the work for you</h4>
                 <p>
                   Our team scans online marketplaces to bring you the best halal
@@ -324,13 +328,13 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="products_exciting_box">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-sm-6 wow fadeIn" data-wow-delay="0.2s">
             <div class="exciting_box f_pd">
-              <img src="images/exciting_img-01.jpg" class="icon-small" alt="" />
+              <img src="images/about-icon-2.png" class="icon-small" alt="" />
               <h4>How do we select products?</h4>
               <p>
                 We search online marketplaces for products that include "halal"
@@ -344,7 +348,7 @@
           </div>
           <div class="col-md-6 col-sm-6 wow fadeIn" data-wow-delay="0.4s">
             <div class="exciting_box l_pd">
-              <img src="images/exciting_img-02.jpg" class="icon-small" alt="" />
+              <img src="images/about-icon-3.png" class="icon-small" alt="" />
               <h4>How can you help?</h4>
               <p>
                 Our purpose is to find and list halal products only. However, we
@@ -375,9 +379,9 @@
                 <div class="col-md-6 col-sm-6">
                   <div class="right-a-f">
                     <p>
-                      We know that your time is valuable. Now, you can save it
-                      finding products that are compatible with your lifestyle
-                      and values.
+                      We know that your time is valuable. Now, you can save more
+                      of it finding products that are compatible with your
+                      lifestyle and values.
                     </p>
                   </div>
                 </div>
@@ -429,27 +433,29 @@
               <div class="supplier clearfix">
                 <div class="col-md-5 col-sm-6">
                   <div class="left-supplier">
-                    <h4>supplier</h4>
+                    <!-- <h4>supplier</h4> -->
                     <h2>
-                      Grow your store <br /><span
-                        >With a new sales channel</span
+                      Craving for food <br /><span
+                        >Find halal restaurants <br />in your town</span
                       >
                     </h2>
                     <p>
-                      Never worry about sales or income ftom outbound channels.
-                      with chamb your store is directly connected to thousands
-                      of interested in your products.
+                      Zabihah is an online directory where you can find halal
+                      restaurants and markets in the United States.
+                      <br />The Halal Buys is not affiliated with Zabihah.
                     </p>
                     .
-                    <a href="#">Create a supplier account</a>
+                    <a href="http://www.zabihah.com/" target="_blank"
+                      >Go to Zabihah.com</a
+                    >
                   </div>
                 </div>
                 <div class="col-md-7 col-sm-6">
                   <div class="right-supplier">
                     <img
-                      class="img-responsive"
-                      src="images/supplier-pc-img.png"
-                      alt="#"
+                      class="img-responsive food-img"
+                      src="images/food.jpg"
+                      alt="food"
                     />
                   </div>
                 </div>
@@ -660,14 +666,17 @@
               </div>
               <div class="col-md-6 col-sm-6">
                 <div class="form-box">
-                  <input type="text" placeholder="Enter yopur e-mail" />
+                  <input type="text" placeholder="Enter your e-mail address" />
                   <button>Sign Up</button>
                 </div>
               </div>
               <div class="col-md-4 col-sm-12">
                 <div class="help-box-f">
                   <h4>Question? Feedback? Send us a message!</h4>
-                  <p>Our email address is info@thehalalbuys.com</p>
+                  <p>
+                    Our email address is
+                    <strong>info@thehalalbuys.com</strong>
+                  </p>
                 </div>
               </div>
             </div>
