some changes in certain files

--- a/about-us.html
+++ b/about-us.html
@@ -146,7 +146,7 @@
                         </a>
                       </li>
                       <li>
-                        <a href="#"
+                        <a href="howitworks.html"
                           ><img class="h-i" src="images/help-icon.png" alt="" />
                           Help
                         </a>
@@ -211,15 +211,18 @@
           <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <div class="wow fadeIn" data-wow-delay="0.0s">
-                <h1>Expand business. Inspiring you to success.</h1>
+                <h1>Who are we? What is our mission?</h1>
                 <p class="lead">
-                  Here at Chamb, we want you to find new connections, grow
-                  profitable relationships, and make more money than you could
-                  ever dream of making. Sound like something you’d like to do?
-                  Then what are you reading this for?
+                  We are a small group of people, who try to eat, dress and live
+                  according to what is permissible in Islam, which is called
+                  "halal". We know how difficult it can be to find halal
+                  versions of certain products especially in the West.
+                  Therefore, we started THB as an online directory where fellow
+                  Muslims can find halal products in various categories.
                   <br />
                   <br />
-                  Go sign up and get inspired!
+                  Please, note that we earn a small commission on purchases made
+                  by using the links provided by THB.
                 </p>
               </div>
               <div class="about-icons row">
@@ -442,19 +445,20 @@
           <div class="row">
             <div class="footer-top clearfix">
               <div class="col-md-2 col-sm-6">
-                <h2>Start a free account today</h2>
+                <h2>Sign up for our newsletter!</h2>
               </div>
               <div class="col-md-6 col-sm-6">
                 <div class="form-box">
-                  <input type="text" placeholder="Enter yopur e-mail" />
-                  <button>Continue</button>
+                  <input type="text" placeholder="Enter your e-mail address" />
+                  <button>Sign Up</button>
                 </div>
               </div>
               <div class="col-md-4 col-sm-12">
                 <div class="help-box-f">
-                  <h4>Question? Call us on 12 34 56 78 for help</h4>
+                  <h4>Question? Feedback? Send us a message!</h4>
                   <p>
-                    Easy setup - no payment fees - up to 100 products for free
+                    Our email address is
+                    <strong>info@thehalalbuys.com</strong>
                   </p>
                 </div>
               </div>
@@ -462,8 +466,8 @@
             <div class="footer-link-box clearfix">
               <div class="col-md-6 col-sm-6">
                 <div class="left-f-box">
-                  <div class="col-sm-4">
-                    <h2>SELL ON chamb</h2>
+                  <!-- <div class="col-sm-4">
+                    <h2>SELL ON THB</h2>
                     <ul>
                       <li><a href="#">Create account</a></li>
                       <li>
@@ -474,20 +478,20 @@
                     </ul>
                   </div>
                   <div class="col-sm-4">
-                    <h2>BUY ON chamb</h2>
+                    <h2>BUY ON THB</h2>
                     <ul>
                       <li><a href="#">Create account</a></li>
                       <li><a href="#">How it works buyers</a></li>
                       <li><a href="#">Categories</a></li>
                       <li><a href="#">FAQ for buyers</a></li>
                     </ul>
-                  </div>
+                  </div> -->
                   <div class="col-sm-4">
                     <h2>COMPANY</h2>
                     <ul>
-                      <li><a href="about-us.html">About chamb</a></li>
+                      <li><a href="about-us.html">About The Halal Buys</a></li>
                       <li><a href="#">Contact us</a></li>
-                      <li><a href="#">Press</a></li>
+                      <!-- <li><a href="#">Press</a></li> -->
                       <li><a href="#">Careers</a></li>
                       <li><a href="#">Terms of use</a></li>
                     </ul>
@@ -496,27 +500,27 @@
               </div>
               <div class="col-md-6 col-sm-6">
                 <div class="right-f-box">
-                  <h2>INDUSTRIES</h2>
+                  <h2>CATEGORIES</h2>
                   <ul class="col-sm-4">
-                    <li><a href="#">Textiles</a></li>
-                    <li><a href="#">Furniture</a></li>
-                    <li><a href="#">Leather</a></li>
-                    <li><a href="#">Agriculture</a></li>
-                    <li><a href="#">Food & drinks</a></li>
+                    <li><a href="#">Grocery</a></li>
+                    <li><a href="#">Clothing & Shoes</a></li>
+                    <li><a href="#">Toys & Games</a></li>
+                    <li><a href="#">Home Design</a></li>
+                    <li><a href="#">Personal Care</a></li>
                   </ul>
                   <ul class="col-sm-4">
-                    <li><a href="#">Office</a></li>
-                    <li><a href="#">Decoratives</a></li>
-                    <li><a href="#">Electronics</a></li>
-                    <li><a href="#">Machines</a></li>
-                    <li><a href="#">Building</a></li>
+                    <li><a href="#">Household Essentials</a></li>
+                    <li><a href="#">Sports & Outdoors</a></li>
+                    <li><a href="#">Books</a></li>
+                    <li><a href="#">Baby</a></li>
+                    <li><a href="#">Pet Supplies</a></li>
                   </ul>
-                  <ul class="col-sm-4">
+                  <!-- <ul class="col-sm-4">
                     <li><a href="#">Cosmetics</a></li>
                     <li><a href="#">Health</a></li>
                     <li><a href="#">Jewelry</a></li>
                     <li><a href="#">See all here</a></li>
-                  </ul>
+                  </ul> -->
                 </div>
               </div>
             </div>
@@ -528,13 +532,13 @@
           <div class="row">
             <div class="col-md-8">
               <p>
-                <img
+                <!-- <img
                   width="90"
                   src="images/logo.png"
                   alt="#"
                   style="margin-top: -5px"
-                />
-                All Rights Reserved. Company Name © 2018
+                /> -->
+                All Rights Reserved. The Halal Buys © 2022
               </p>
             </div>
             <div class="col-md-4">
@@ -563,7 +567,8 @@
               <ul class="right-flag">
                 <li>
                   <a href="#"
-                    ><img src="images/flag.png" alt="" /> <span>Change</span></a
+                    ><img src="images/flag.png" alt="" />
+                    <span>Country</span></a
                   >
                 </li>
               </ul>
