--- a/howitworks.html
+++ b/howitworks.html
@@ -75,7 +75,7 @@
                         </a>
                       </li>
                       <li>
-                        <a href="#"
+                        <a href="howitworks.html"
                           ><img class="h-i" src="images/help-icon.png" alt="" />
                           Help
                         </a>
@@ -138,18 +138,18 @@
         <div class="row">
           <div class="col-md-5 col-sm-6 col-xs-12">
             <div class="left-works-box wow fadeIn" data-wow-delay="0.2s">
-              <h2>How it works if <br /><span>you’re a buyer.</span></h2>
+              <h2>How THB helps you<br /><span>find halal products.</span></h2>
               <p>
-                We explained the buying proces of Chamb in three simple steps.
-                See how it works, benefits and FAQ.
+                We explained the whole process in three simple steps. Scroll
+                down to see more.
               </p>
-              <div class="form-email-box">
+              <!-- <div class="form-email-box">
                 <h3>Sign up for free</h3>
                 <form class="box-email">
                   <input type="email" placeholder="Enter your e-mail" />
                   <button>Continue</button>
                 </form>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="col-md-7 col-sm-6 col-xs-12">
@@ -160,24 +160,24 @@
                   <div class="dit-img">
                     <img
                       class="img-responsive"
-                      src="images/works-icon-01.png"
+                      src="images/works-icon-02.png"
                       alt=""
                     />
                   </div>
-                  <h3>Sign up</h3>
+                  <h3>Search</h3>
                   <h2>
-                    <span>Small or big,</span><br />
-                    we have the solution.
+                    <span>Is that halal?</span><br />
+                    we read the descriptions.
                   </h2>
                   <p>
-                    Sed ut perspiciatis unde omnis iste natus error sit
-                    voluptatem accusantium doloremque laudantium rem aperiam,
-                    eaque ipsa quae ab illo inventore veritatis et quasi
-                    architecto beatae vitae dicta sunt explicabo.
+                    We search the Internet for halal products and add them to
+                    our directory for you. Whether it be a popular online
+                    marketplace such as Amazon and Walmart or a specific brand
+                    such as Nike, we have them covered.
                   </p>
                   <p>
-                    laudantium rem aperiam, eaque ipsa quae ab illo inventore
-                    veritatis
+                    Our team picks products in certain categories for you to
+                    browse them in one place.
                   </p>
                   <div class="line"></div>
                 </div>
@@ -188,24 +188,26 @@
                   <div class="dit-img">
                     <img
                       class="img-responsive"
-                      src="images/works-icon-02.png"
+                      src="images/works-icon-03.png"
                       alt=""
                     />
                   </div>
-                  <h3>Search</h3>
+                  <h3>Explore</h3>
                   <h2>
-                    We revolutionized <br />
-                    <span>searching.</span>
+                    The options are there <br />
+                    <span>for you to pick.</span>
                   </h2>
                   <p>
-                    laudantium rem aperiam, eaque ipsa quae ab illo inventore
-                    veritatis
+                    Now, it's your turn to pick the product that is right for
+                    you.
                   </p>
                   <p>
-                    Sed ut perspiciatis unde omnis iste natus error sit
-                    voluptatem accusantium doloremque laudantium rem aperiam,
-                    eaque ipsa quae ab illo inventore veritatis et quasi
-                    architecto beatae vitae dicta sunt explicabo.
+                    You can browse different categories on THB from groceries to
+                    personal care to find the product you are looking for. Since
+                    we do not sell these products directly, we cannot guarantee
+                    the halal status. So, please, check with the seller to make
+                    sure the product you are buying is compliant with your
+                    values.
                   </p>
                   <div class="line"></div>
                 </div>
@@ -216,21 +218,23 @@
                   <div class="dit-img">
                     <img
                       class="img-responsive"
-                      src="images/works-icon-03.png"
+                      src="images/works-icon-01.png"
                       alt=""
                     />
                   </div>
-                  <h3>Contact & buy</h3>
-                  <h2>Contact sellers <br />and <span>start buying</span></h2>
+                  <h3>Purchase</h3>
+                  <h2>Click the link <br />to <span>make a purchase</span></h2>
                   <p>
-                    Sed ut perspiciatis unde omnis iste natus error sit
-                    voluptatem accusantium doloremque laudantium rem aperiam,
-                    eaque ipsa quae ab illo inventore veritatis et quasi
-                    architecto beatae vitae dicta sunt explicabo.
+                    We do not process payments on THB. When you click the link
+                    that says "BUY", you are prompted to the actual website
+                    where the product is being sold. This could be an online
+                    marketplace such as Amazon, Walmart and Etsy or a brand
+                    website such as Nike. You can use any payment method offered
+                    by the seller to finalize the purchase.
                   </p>
                   <p>
-                    laudantium rem aperiam, eaque ipsa quae ab illo inventore
-                    veritatis
+                    Please, note that we earn a small commission when you make a
+                    purchase using the link provided by THB.
                   </p>
                 </div>
               </div>
@@ -239,7 +243,7 @@
         </div>
       </div>
     </div>
-    <div class="works-systems">
+    <!-- <div class="works-systems">
       <div class="container">
         <div class="row">
           <div class="col-md-5 col-sm-6 col-xs-12">
@@ -314,12 +318,29 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="section-safety">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2>Bwnefis with trust and safety</h2>
+            <h2>Terms for trust and safety</h2>
+          </div>
+          <div
+            class="col-md-4 col-sm-6 col-xs-12 wow fadeIn"
+            data-wow-delay="0.4s"
+          >
+            <div class="benenfit-box">
+              <div class="icon-b">
+                <img src="images/icon-b4.png" alt="" />
+              </div>
+              <h3>Data Protection</h3>
+              <p>
+                We do not collect any personal or payment data from the
+                visitors. We also do not process any payments on the website.
+                THB is only an affiliate marketing website, where you can search
+                for products to buy on third-party marketplaces and brands.
+              </p>
+            </div>
           </div>
           <div
             class="col-md-4 col-sm-6 col-xs-12 wow fadeIn"
@@ -329,29 +350,12 @@
               <div class="icon-b">
                 <img src="images/icon-b1.png" alt="" />
               </div>
-              <h3>Branden Minisite</h3>
+              <h3>Secure Website</h3>
               <p>
-                On the other hand, we denounce with righteous indignation and
-                dislike men who are so beguiled and demoralized by the charms of
-                pleasure of the moment, so blinded by desire, that they cannot
-                foresee the pain and trouble that are bound.
-              </p>
-            </div>
-          </div>
-          <div
-            class="col-md-4 col-sm-6 col-xs-12 wow fadeIn"
-            data-wow-delay="0.4s"
-          >
-            <div class="benenfit-box">
-              <div class="icon-b">
-                <img src="images/icon-b2.png" alt="" />
-              </div>
-              <h3>Vetted Sellers</h3>
-              <p>
-                On the other hand, we denounce with righteous indignation and
-                dislike men who are so beguiled and demoralized by the charms of
-                pleasure of the moment, so blinded by desire, that they cannot
-                foresee the pain and trouble that are bound.
+                THB has an SSL certificate, so uses HTTPS, which is the secured
+                version of HTTP protocol. SSL certificate helps to secure
+                communication between the web browser and the website by
+                encrypting messages that are sent.
               </p>
             </div>
           </div>
@@ -361,18 +365,18 @@
           >
             <div class="benenfit-box">
               <div class="icon-b">
-                <img src="images/icon-b3.png" alt="" />
+                <img src="images/icon-b5.png" alt="" />
               </div>
-              <h3>Verified with 3. part</h3>
+              <h3>Reputable Sellers</h3>
               <p>
-                On the other hand, we denounce with righteous indignation and
-                dislike men who are so beguiled and demoralized by the charms of
-                pleasure of the moment, so blinded by desire, that they cannot
-                foresee the pain and trouble that are bound.
+                We work only with reputable brands such as Amazon, Walmart, Etsy
+                and more. Your trust is important for us. Therefore, we do not
+                include any product from a website that is known for fraudulent
+                transactions.
               </p>
             </div>
           </div>
-          <div
+          <!-- <div
             class="col-md-4 col-sm-6 col-xs-12 wow fadeIn"
             data-wow-delay="0.2s"
           >
@@ -422,7 +426,7 @@
                 foresee the pain and trouble that are bound.
               </p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -449,7 +453,7 @@
                         aria-expanded="true"
                         aria-controls="faq-a"
                       >
-                        What acn I do with Chamb Free?
+                        What is THB?
                       </a>
                     </h4>
                   </div>
@@ -478,7 +482,7 @@
                         aria-expanded="false"
                         aria-controls="faq-b"
                       >
-                        How do I upgrade?
+                        Do I need to sign up?
                       </a>
                     </h4>
                   </div>
@@ -507,7 +511,7 @@
                         aria-expanded="false"
                         aria-controls="faq-c"
                       >
-                        When will I be charged?
+                        Is THB a free service?
                       </a>
                     </h4>
                   </div>
@@ -536,7 +540,7 @@
                         aria-expanded="false"
                         aria-controls="faq-d"
                       >
-                        How can i cancel my plan?
+                        Can I cancel my subscription for the newsletter?
                       </a>
                     </h4>
                   </div>
@@ -578,7 +582,7 @@
                         aria-expanded="true"
                         aria-controls="faq-right-a"
                       >
-                        Can I get help to create my account?
+                        Is everything on THB halal?
                       </a>
                     </h4>
                   </div>
@@ -609,7 +613,7 @@
                         aria-expanded="false"
                         aria-controls="faq-right-b"
                       >
-                        What if i only want to try Chamb?
+                        Are you affiliated with any organization?
                       </a>
                     </h4>
                   </div>
@@ -642,7 +646,7 @@
                         aria-expanded="false"
                         aria-controls="faq-right-c"
                       >
-                        What if i need a custom solution?
+                        What if I find a non-halal product on THB?
                       </a>
                     </h4>
                   </div>
@@ -676,7 +680,7 @@
                         aria-expanded="false"
                         aria-controls="faq-right-d"
                       >
-                        I have more questions..
+                        I have more questions
                       </a>
                     </h4>
                   </div>
@@ -706,19 +710,20 @@
           <div class="row">
             <div class="footer-top clearfix">
               <div class="col-md-2 col-sm-6">
-                <h2>Start a free account today</h2>
+                <h2>Sign up for our newsletter!</h2>
               </div>
               <div class="col-md-6 col-sm-6">
                 <div class="form-box">
-                  <input type="text" placeholder="Enter yopur e-mail" />
-                  <button>Continue</button>
+                  <input type="text" placeholder="Enter your e-mail address" />
+                  <button>Sign Up</button>
                 </div>
               </div>
               <div class="col-md-4 col-sm-12">
                 <div class="help-box-f">
-                  <h4>Question? Call us on 12 34 56 78 for help</h4>
+                  <h4>Question? Feedback? Send us a message!</h4>
                   <p>
-                    Easy setup - no payment fees - up to 100 products for free
+                    Our email address is
+                    <strong>info@thehalalbuys.com</strong>
                   </p>
                 </div>
               </div>
@@ -726,8 +731,8 @@
             <div class="footer-link-box clearfix">
               <div class="col-md-6 col-sm-6">
                 <div class="left-f-box">
-                  <div class="col-sm-4">
-                    <h2>SELL ON chamb</h2>
+                  <!-- <div class="col-sm-4">
+                    <h2>SELL ON THB</h2>
                     <ul>
                       <li><a href="#">Create account</a></li>
                       <li>
@@ -738,20 +743,20 @@
                     </ul>
                   </div>
                   <div class="col-sm-4">
-                    <h2>BUY ON chamb</h2>
+                    <h2>BUY ON THB</h2>
                     <ul>
                       <li><a href="#">Create account</a></li>
                       <li><a href="#">How it works buyers</a></li>
                       <li><a href="#">Categories</a></li>
                       <li><a href="#">FAQ for buyers</a></li>
                     </ul>
-                  </div>
+                  </div> -->
                   <div class="col-sm-4">
                     <h2>COMPANY</h2>
                     <ul>
-                      <li><a href="about-us.html">About chamb</a></li>
+                      <li><a href="about-us.html">About The Halal Buys</a></li>
                       <li><a href="#">Contact us</a></li>
-                      <li><a href="#">Press</a></li>
+                      <!-- <li><a href="#">Press</a></li> -->
                       <li><a href="#">Careers</a></li>
                       <li><a href="#">Terms of use</a></li>
                     </ul>
@@ -760,27 +765,27 @@
               </div>
               <div class="col-md-6 col-sm-6">
                 <div class="right-f-box">
-                  <h2>INDUSTRIES</h2>
+                  <h2>CATEGORIES</h2>
                   <ul class="col-sm-4">
-                    <li><a href="#">Textiles</a></li>
-                    <li><a href="#">Furniture</a></li>
-                    <li><a href="#">Leather</a></li>
-                    <li><a href="#">Agriculture</a></li>
-                    <li><a href="#">Food & drinks</a></li>
+                    <li><a href="#">Grocery</a></li>
+                    <li><a href="#">Clothing & Shoes</a></li>
+                    <li><a href="#">Toys & Games</a></li>
+                    <li><a href="#">Home Design</a></li>
+                    <li><a href="#">Personal Care</a></li>
                   </ul>
                   <ul class="col-sm-4">
-                    <li><a href="#">Office</a></li>
-                    <li><a href="#">Decoratives</a></li>
-                    <li><a href="#">Electronics</a></li>
-                    <li><a href="#">Machines</a></li>
-                    <li><a href="#">Building</a></li>
+                    <li><a href="#">Household Essentials</a></li>
+                    <li><a href="#">Sports & Outdoors</a></li>
+                    <li><a href="#">Books</a></li>
+                    <li><a href="#">Baby</a></li>
+                    <li><a href="#">Pet Supplies</a></li>
                   </ul>
-                  <ul class="col-sm-4">
+                  <!-- <ul class="col-sm-4">
                     <li><a href="#">Cosmetics</a></li>
                     <li><a href="#">Health</a></li>
                     <li><a href="#">Jewelry</a></li>
                     <li><a href="#">See all here</a></li>
-                  </ul>
+                  </ul> -->
                 </div>
               </div>
             </div>
@@ -792,13 +797,13 @@
           <div class="row">
             <div class="col-md-8">
               <p>
-                <img
+                <!-- <img
                   width="90"
                   src="images/logo.png"
                   alt="#"
                   style="margin-top: -5px"
-                />
-                All Rights Reserved. Company Name © 2018
+                /> -->
+                All Rights Reserved. The Halal Buys © 2022
               </p>
             </div>
             <div class="col-md-4">
@@ -827,7 +832,8 @@
               <ul class="right-flag">
                 <li>
                   <a href="#"
-                    ><img src="images/flag.png" alt="" /> <span>Change</span></a
+                    ><img src="images/flag.png" alt="" />
+                    <span>Country</span></a
                   >
                 </li>
               </ul>
