--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </a>
                       </li>
                       <li>
-                        <a href="#"
+                        <a href="howitworks.html"
                           ><img class="h-i" src="images/help-icon.png" alt="" />
                           Help
                         </a>
@@ -709,7 +709,7 @@
                     <ul>
                       <li><a href="about-us.html">About The Halal Buys</a></li>
                       <li><a href="#">Contact us</a></li>
-                      <li><a href="#">Press</a></li>
+                      <!-- <li><a href="#">Press</a></li> -->
                       <li><a href="#">Careers</a></li>
                       <li><a href="#">Terms of use</a></li>
                     </ul>
